--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "again": "^0.0.1",
-    "next": ">=15.5.10",
+    "next": ">=15.6.0-canary.61",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
