--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "uniswipe",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "api": "./run_api.sh"
-  },
-  "dependencies": {
-    "again": "^0.0.1",
-    "next": ">=15.6.0-canary.61",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "16.0.6",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "uniswipe",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"api": "./run_api.sh"
+	},
+	"dependencies": {
+		"again": "^0.0.1",
+		"next": ">=16.1.5",
+		"react": ">=18.3.1",
+		"react-dom": ">=18.3.1"
+	},
+	"devDependencies": {
+		"@types/node": ">=20",
+		"@types/react": ">=18.3.3",
+		"@types/react-dom": ">=18",
+		"eslint": ">=9.0.0",
+		"eslint-config-next": "16.0.6",
+		"postcss": ">=8",
+		"tailwindcss": ">=3.4.1",
+		"typescript": ">=5"
+	}
 }
